agregar profesora listo

--- a/lang/es.json
+++ b/lang/es.json
@@ -194,6 +194,7 @@
     "Not Found": "No encontrado",
     "Not Implemented": "No se ha implementado",
     "Not Modified": "No modificado",
+    "numberId": "Número de identificación",
     "of": "de",
     "OK": "DE ACUERDO",
     "Once a team is deleted, all of its resources and data will be permanently deleted. Before deleting this team, please download any data or information regarding this team that you wish to retain.": "Una vez que se elimina un equipo, todos sus recursos y datos se eliminarán de forma permanente. Antes de eliminar este equipo, descargue cualquier dato o información sobre este equipo que desee conservar.",
