tabla schedule llena

--- a/lang/es.json
+++ b/lang/es.json
@@ -46,6 +46,7 @@
     "Cancel": "Cancelar",
     "Capacitation" : "Capacitación",
     "Capacitations" : "Capacitaciones",
+    "Capacitation Administration" : "Administración de Capacitaciones",
     "Choose": "Elija",
     "Choose :name": "Elegir :name",
     "Choose File": "Elija archivo",
