Final de horarios

--- a/lang/es.json
+++ b/lang/es.json
@@ -277,6 +277,7 @@
     "Session Has Expired": "La sesión ha expirado",
     "Settings": "Ajustes",
     "Setup Key": "Clave de configuración",
+    "Schedules": "Horarios", 
     "Show": "Mostrar",
     "Show :name": "Mostrar :name",
     "Show All": "Mostrar todo",
